--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,3 +18,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+
+-   repo: local
+    hooks:
+    -   id: requirements
+        name: requirements.txt is current
+        entry: poetry export -o requirements.txt
+        pass_filenames: false
+        language: system
